--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -756,8 +756,8 @@
                             "condition": "module_prowlarr status"
                         },
                         {
-                            "id": "DOW040",
-                            "description": "Jellyseerr install",
+                            "id": "JEL001",
+                            "description": "Jellyseerr Jellyfin/Emby/Plex integration install",
                             "command": [
                                 "module_jellyseerr install"
                             ],
@@ -766,7 +766,7 @@
                             "condition": "! module_jellyseerr status"
                         },
                         {
-                            "id": "DOW041",
+                            "id": "JEL002",
                             "description": "Jellyseerr remove ",
                             "command": [
                                 "module_jellyseerr remove"
@@ -776,14 +776,14 @@
                             "condition": "module_jellyseerr status"
                         },
                         {
-                            "id": "DOW042",
+                            "id": "JEL003",
                             "description": "Jellyseerr purge data folder",
                             "command": [
                                 "module_jellyseerr purge"
                             ],
                             "status": "Stable",
                             "author": "@armbian",
-                            "condition": "! module_jellyseerr status && [[ -d \"${SOFTWARE_FOLDER}/jellyseerr\" ]]"
+                            "condition": "module_jellyseerr status ]]"
                         }
                     ]
                 },
